Fix overflow in IE

--- a/src/blocks/block-column-inner/styles/style.scss
+++ b/src/blocks/block-column-inner/styles/style.scss
@@ -190,7 +190,7 @@
 .ab-layout-columns-4,
 .ab-layout-columns-5,
 .ab-layout-columns-6 {
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 .ab-layout-columns-5 .ab-layout-column-wrap {
